Fix failing Integration Tests (in Github API tests), fix Skipped Avatar E2E tests, convert unmutable Sets in Priest and Tenant to mutable, Make teach IT tests Transactional